# loconotion

./: .gitignore  pyproject.toml  requirements.txt
loconotion/modules/: conditions.py  notionparser.py
