[tool.poetry]
name = "loconotion"
version = "0.1.0"
description = "Turn Notion pages into lightweight, customizable static websites"
authors = ["Leonardo Cavaletti <impeto.blu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "*"
chromedriver-autoinstaller = "*"
colorama = "*"
cssutils = "*"
requests = "*"
selenium = "*"
toml = "*"
html5lib = "*"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^7.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
