[tool.poetry]
name = "loconotion"
version = "0.1.0"
description = "Turn Notion pages into lightweight, customizable static websites"
authors = ["Leonardo Cavaletti <impeto.blu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
chromedriver-autoinstaller = "^0.6.4"
colorama = "^0.4.6"
cssutils = "^2.11.1"
requests = "^2.32.3"
selenium = "^4.22.0"
toml = "^0.10.2"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^7.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
